# agent-toolbox

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  security.yml
agent_toolbox/: __init__.py  api_client.py  data_processing.py  file_operations.py  shell_execution.py  web_scraping.py
agent_toolbox/core/: __init__.py  execution_context.py  sandbox.py  tool_base.py  tool_composer.py  tool_registry.py  versioning.py
agent_toolbox/integrations/: __init__.py  database_client.py  email_client.py  github_client.py  http_server.py  slack_client.py  webhook_client.py
agent_toolbox/tools/: __init__.py  api_tools.py  file_tools.py  web_tools.py
agent_toolbox/utils/: __init__.py  advanced_cache.py  advanced_rate_limiter.py  analytics.py  cache.py  config_manager.py  crypto.py  error_recovery.py  formatters.py  logger.py  monitor.py  rate_limiter.py  retry_decorator.py  scheduler.py  validators.py
benchmarks/: __init__.py  file_operations_benchmark.py
docs/: api_reference.md  examples.md  quickstart.md
examples/: agent_workflow.py  basic_usage.py  comprehensive_test.py
tests/: __init__.py  test_api_client.py  test_crypto.py  test_file_operations.py  test_shell_execution.py  test_utils.py
