[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbox"
version = "0.1.0"
description = "A comprehensive toolkit of reusable agent tools and utilities"
readme = "README.md"
authors = [{name = "Agent Development Team", email = "dev@agent-toolbox.io"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "aiohttp>=3.7.4",
    "PyYAML>=5.4.1",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.2.4", "black>=21.5b2", "flake8>=3.9.2"]

[project.urls]
Homepage = "https://github.com/andreycpu/agent-toolbox"
Repository = "https://github.com/andreycpu/agent-toolbox"